DuPont DevSB/src/objects/CI_Last_Run_Time__c.object
<CustomObject>
    <description>Used to capture the last run time for cases sent to EtQ via Cast Iron.</description>
    <fields>
        <fullName>Lastruntime__c</fullName>
        <label>Lastruntime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OrchName__c</fullName>
        <label>OrchName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CI Last Run Time</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CI Last Run Time Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CI Last Run Times</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>